# cs425

./: .gitignore
lab1/: .hello.ko.cmd  .hello.mod.cmd  .hello.mod.o.cmd  .hello.o.cmd  changes.txt
lab1/p1/: hello.c  hello.ko  hello.mod  hello.mod.c  modules.order
lab1/p2/: .hello.ko.cmd  .hello.mod.cmd  .hello.mod.o.cmd  .hello.o.cmd  .hello2.ko.cmd  .hello2.mod.cmd  .hello2.mod.o.cmd  .hello2.o.cmd  Makefile  hello.ko  hello.mod  hello.mod.c  hello2.c  hello2.ko  hello2.mod  hello2.mod.c  modules.order
lab1/p3/: Makefile  basemod.c  basemod.h  headers.h  ioctl3.h  multi.c  smartmod.c  test3.c  test4.c
lab1/p6/: Makefile  capitalize_syscall.c  test.c  test7.c
lab2/button/: button.c  makefile
lab2/music/: makefile  music.c
lab2/speaker/: makefile  speaker.c
lab2/touch/: makefile  touch.c
lab3/part0/: Cargo.toml
lab3/part0/src/: main.rs
lab3/part12/src/: main.rs
lab4/part1/src/: main.rs
lab4/part2/.cargo/: config
lab4/part2/src/: main.rs
lab4/part3/: Cargo.toml
lab4/part3/src/: main.rs
lab4/part4/: Cargo.toml  openocd.gdb
lab4/part4/src/: kernel.rs  main.rs
lab5/: Cargo.toml  compile
lab5/src/: c  flash_blue  flash_blue.rs  flash_green  flash_green.rs  kernel.rs  main.rs
